--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.3",
     "date-fns": "^3.6.0",
-    "dolan.rek-v1": "github:TaopikQM/productbil#main
+    "dolan.rek-v1": "github:TaopikQM/productbil#main",
     "get-query-params": "^1.0.5",
     "next": "^14.2.3",
     "react": "^18",
